[gd_scene load_steps=28 format=3 uid="uid://cv13rl06hipar"]

[ext_resource type="Texture2D" uid="uid://b6rl6g04a1gf" path="res://icon.svg" id="1_dn72j"]
[ext_resource type="Script" uid="uid://dpsnkcci5wv88" path="res://scripts/battle.gd" id="1_th188"]
[ext_resource type="Resource" uid="uid://crywy6cbmpl4n" path="res://enemies/alex.tres" id="2_6vh42"]
[ext_resource type="Texture2D" uid="uid://blknmg5f5r3rj" path="res://assets/graphics/fight/fightanimate.png" id="4_lpir7"]
[ext_resource type="Texture2D" uid="uid://b261kp5d48wqc" path="res://assets/graphics/fight/idle.png" id="5_6vh42"]
[ext_resource type="Texture2D" uid="uid://5gugumx1jc30" path="res://assets/graphics/UI/dialogue_box.png" id="6_6vh42"]
[ext_resource type="AudioStream" uid="uid://bbqm8hsuxjqhc" path="res://assets/graphics/audio/13 - Danger.ogg" id="7_4k1nj"]
[ext_resource type="FontFile" uid="uid://1sqa2244pwmi" path="res://assets/fonts/dedicool/Dedicool.ttf" id="7_f4pi3"]
[ext_resource type="FontFile" uid="uid://bbyfmunnflpii" path="res://assets/fonts/pixelify_sans/static/PixelifySans-Regular.ttf" id="7_yahae"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4k1nj"]
atlas = ExtResource("4_lpir7")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4pi3"]
atlas = ExtResource("4_lpir7")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yahae"]
atlas = ExtResource("4_lpir7")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7i3o"]
atlas = ExtResource("4_lpir7")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_66ngm"]
atlas = ExtResource("5_6vh42")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_03edq"]
atlas = ExtResource("5_6vh42")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_22uqi"]
atlas = ExtResource("5_6vh42")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ni85"]
atlas = ExtResource("5_6vh42")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_vceff"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k1nj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4pi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yahae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7i3o")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_66ngm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03edq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22uqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ni85")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}]

[sub_resource type="Animation" id="Animation_a12nh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_p1qf1"]
resource_name = "enemy_damaged"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_lpir7"]
resource_name = "enemy_died"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_6vh42"]
resource_name = "player_damaged"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4k1nj"]
resource_name = "player_died"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lpir7"]
_data = {
&"RESET": SubResource("Animation_a12nh"),
&"enemy_damaged": SubResource("Animation_p1qf1"),
&"enemy_died": SubResource("Animation_lpir7"),
&"player_damaged": SubResource("Animation_6vh42"),
&"player_died": SubResource("Animation_4k1nj")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dn72j"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4k1nj"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yahae"]
bg_color = Color(1, 1, 1, 1)

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_th188")
enemy = ExtResource("2_6vh42")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Enemy" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 980.0
offset_top = 287.0
offset_right = 1108.0
offset_bottom = 415.0
size_flags_horizontal = 8
texture = ExtResource("1_dn72j")
stretch_mode = 3

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(184, 299)
scale = Vector2(4.83594, 4.83594)
sprite_frames = SubResource("SpriteFrames_vceff")
animation = &"idle"
autoplay = "idle"
frame = 1
frame_progress = 0.734303

[node name="ActionsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -1.0
offset_top = 576.0
offset_right = -1.0
offset_bottom = 646.0
grow_horizontal = 2

[node name="TextureRect" type="TextureRect" parent="ActionsPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -554.0
offset_top = -181.0
offset_right = 556.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("6_6vh42")

[node name="Label" type="Label" parent="ActionsPanel"]
layout_mode = 2
offset_left = 435.0
offset_top = -90.0
offset_right = 719.0
offset_bottom = -51.0
theme_override_fonts/font = ExtResource("7_yahae")
theme_override_font_sizes/font_size = 32
text = "Choose your move:"

[node name="Actions" type="HBoxContainer" parent="ActionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 99.0
offset_top = -38.0
offset_right = -99.0
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 2

[node name="Attack1Button" type="Button" parent="ActionsPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_fonts/font = ExtResource("7_f4pi3")
theme_override_font_sizes/font_size = 32
text = "ATTACK"

[node name="MarginContainer2" type="MarginContainer" parent="ActionsPanel/Actions"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2

[node name="Attack2Button" type="Button" parent="ActionsPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_fonts/font = ExtResource("7_f4pi3")
theme_override_font_sizes/font_size = 32
text = "DEFEND"

[node name="MarginContainer3" type="MarginContainer" parent="ActionsPanel/Actions"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2

[node name="DefendButton" type="Button" parent="ActionsPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_fonts/font = ExtResource("7_f4pi3")
theme_override_font_sizes/font_size = 32
text = "RUN"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lpir7")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -1.0
offset_bottom = 49.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="ProgressPanel" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PlayerProgress" type="ProgressBar" parent="MarginContainer/ProgressPanel"]
custom_minimum_size = Vector2(100, 40)
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_dn72j")
theme_override_styles/fill = SubResource("StyleBoxFlat_4k1nj")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="MarginContainer/ProgressPanel/PlayerProgress"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -12.0
offset_top = 42.0
offset_right = -12.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_f4pi3")
theme_override_font_sizes/font_size = 32
text = "25/50
"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/ProgressPanel"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2

[node name="EnemyProgress" type="ProgressBar" parent="MarginContainer/ProgressPanel"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_dn72j")
theme_override_styles/fill = SubResource("StyleBoxFlat_yahae")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="MarginContainer/ProgressPanel/EnemyProgress"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_top = 42.0
offset_right = -15.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_f4pi3")
theme_override_font_sizes/font_size = 32
text = "25/50
"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ProgressPanel"]
layout_mode = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_4k1nj")
autoplay = true

[connection signal="pressed" from="ActionsPanel/Actions/Attack1Button" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Attack2Button" to="." method="_on_defend_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/DefendButton" to="." method="_on_run_pressed"]
